--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,10 @@ body {
     color: #6a737b;
 }
 
+.is-centered{
+    display: inline-block;
+}
+
 ol, ul {
     margin: 0;
     padding: 0;
@@ -41,7 +45,7 @@ a, a:focus, a:hover {
 }
 
 a:focus, a:hover {
-    color: #6CB670;
+    color: #0083FF;
 }
 
 h1, h2, h3,
@@ -76,7 +80,7 @@ body > section,
 .sec-title {}
 
 .sec-title h2 {
-  color: #0eb493;
+  color: #0083FF;
   font-size: 28px;
   font-weight: 800;
   text-transform: uppercase;
@@ -141,7 +145,7 @@ body > section,
 ==========================================*/
 
 #navigation {
-  background-color: rgba(16, 22, 54, 0.2);
+  background-color: rgba(255, 255, 255, 0.8);
   border: 0 none;
   margin: 0;
   
@@ -153,7 +157,7 @@ body > section,
 }
 
 .navbar-toggle i {
-	color: #fff;
+	color: #0083FF;
 }
 
 .navbar-brand {
@@ -168,11 +172,13 @@ body > section,
 .navbar-nav li a:focus,
 .navbar-nav li a:hover {
 	background-color: transparent;
-	border-top: 1px solid #32B0EE;
-	color: #fff;
+	border-top: 1px solid #FFFFFF;
+	color: #0083FF;
 }
 
-
+.a-navbar{
+    color: #0083FF;
+}
 
 
 /*=========================================
@@ -302,9 +308,9 @@ top: -8px;
 }
 
 .service-icon {
-  border: 1px solid #0eb493;
+  border: 1px solid #0083FF;
   border-radius: 50%;
-  color: #0eb493;
+  color: #0083FF;
   float: left;
   padding: 10px 13px;
 }
@@ -349,7 +355,7 @@ top: -8px;
 
 .work-filter ul li a:hover,
 .work-filter ul li a.active {
-  background-color: #0eb493;
+  background-color: #0083FF;
   border-radius: 6px;
   color: #fff;
   padding: 5px 17px;
@@ -372,7 +378,7 @@ top: -8px;
 }
 
 .overlay {
-	background-color: rgba(14,180,147,.9);
+	background-color: #0083FF;
 	text-align: center;
 	position: absolute;
 	left: 0;
@@ -476,7 +482,7 @@ top: -8px;
 }
 
 .team-member:hover h4 {
-  color: #0eb493;
+  color: #0083FF;
 }
 
 .team-member .social-links {
@@ -484,8 +490,8 @@ top: -8px;
 }
 
 .team-member .social-links li a {
-  background-color: #0d7c67;
-  color: #fff;
+  background-color: #FFFFFF;
+  color: #0083FF;
   height: 42px;
   padding: 10px 0 0;
   width: 42px;
@@ -646,7 +652,7 @@ label.error {
 
 
 .footer {
-  background-color: #1ea78d;
+  background-color: #0083FF;
   border-top: 5px solid #062033;
   color: #fff;
 }
