--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 
 /* =================================== */
-/*	Basic Style 
+/*	Style de base
 /* =================================== */
 
 body {
@@ -141,7 +141,7 @@ body > section,
 
 
 /*=========================================
-	Header
+	Navbar
 ==========================================*/
 
 #navigation {
