--- a/css/page_inscription.css
+++ b/css/page_inscription.css
@@ -9,9 +9,11 @@ html, body {
     overflow: hidden;
 }
 @media (max-width: 768px) {
-    html, body {
-        font-size: 50%;
+
+    .demo{
+        padding-top: 40px;
     }
+    /*mettre font size a 50 % pour la div qui prend le formulaire*/
 }
 
 svg {
@@ -19,6 +21,25 @@ svg {
     width: 2rem;
     height: 2rem;
     overflow: visible;
+}
+
+i {
+    display: inline-block;
+    width: 2rem;
+    height: 2rem;
+    overflow: visible;
+    color: white;
+}
+
+.logo-nbi{
+    text-align: center;
+}
+
+.logo-nbi img{
+    height: auto;
+    width: auto;
+    max-width: 200px;
+    max-height: 200px;
 }
 
 .svg-icon {
@@ -38,7 +59,7 @@ input, button {
 .cont {
     position: relative;
     height: 100%;
-    background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/slider-2.jpg");
+    background-image: url("../img/fond6.jpeg");
     background-size: cover;
     overflow: auto;
     font-family: "Open Sans", Helvetica, Arial, sans-serif;
@@ -58,8 +79,8 @@ input, button {
 .login {
     position: relative;
     height: 100%;
-    background: -webkit-linear-gradient(top, rgba(146, 135, 187, 0.8) 0%, rgba(0, 0, 0, 0.6) 100%);
-    background: linear-gradient(to bottom, rgba(146, 135, 187, 0.8) 0%, rgba(0, 0, 0, 0.6) 100%);
+    /*background: -webkit-linear-gradient(top, rgba(146, 135, 187, 0.8) 0%, rgba(0, 0, 0, 0.6) 100%);*/
+    background: linear-gradient(to bottom, rgba(0, 130, 255, 0.1) 0%, rgba(0, 130, 255, 0.2) 70%);
     -webkit-transition: opacity 0.1s, -webkit-transform 0.3s cubic-bezier(0.17, -0.65, 0.665, 1.25);
     transition: opacity 0.1s, -webkit-transform 0.3s cubic-bezier(0.17, -0.65, 0.665, 1.25);
     transition: opacity 0.1s, transform 0.3s cubic-bezier(0.17, -0.65, 0.665, 1.25);
@@ -72,31 +93,9 @@ input, button {
     -webkit-transform: scale(1.1);
     transform: scale(1.1);
 }
-.login__check {
-    position: absolute;
-    top: 16rem;
-    left: 13.5rem;
-    width: 14rem;
-    height: 2.8rem;
-    background: #fff;
-    -webkit-transform-origin: 0 100%;
-    transform-origin: 0 100%;
-    -webkit-transform: rotate(-45deg);
-    transform: rotate(-45deg);
-}
-.login__check:before {
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: 100%;
-    width: 2.8rem;
-    height: 5.2rem;
-    background: #fff;
-    box-shadow: inset -0.2rem -2rem 2rem rgba(0, 0, 0, 0.2);
-}
 .login__form {
     position: absolute;
-    top: 50%;
+    top: 22%;
     left: 0;
     width: 100%;
     height: 50%;
@@ -128,7 +127,6 @@ input, button {
     display: inline-block;
     width: 22rem;
     height: 100%;
-    padding-left: 1.5rem;
     font-size: 1.5rem;
     background: transparent;
     color: #FDFCFD;
@@ -137,7 +135,7 @@ input, button {
     position: relative;
     width: 100%;
     height: 4rem;
-    margin: 5rem 0 2.2rem;
+    margin: 3rem 0 2.2rem;
     color: rgba(255, 255, 255, 0.8);
     background: #FF3366;
     font-size: 1.5rem;
